--- a/club.html
+++ b/club.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OAB Jandira</title>
+    <meta name="description" content="Página oficial da OAB de Jandira">
+    <meta name="keywords" content="oabjandira, direito, jandira, advocacia, oab">
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon-OABJandira.ico">
     <link rel="stylesheet" href="assets/css/default.css">
-    <link rel="stylesheet" href="assets/css/club.css">
+    <link rel="stylesheet" href="assets/css/home.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Inter Google -->
@@ -32,23 +35,7 @@
 
         <!-- Acordeão -->
 
-        <div class="d-flex justify-content-center">
-            <div class="accordion">
-                <button class="accordion-header">
-                    <span class="title-club">
-                        <img src="assets/icons/img-parceirosrfabricadeoculos.png" width="200px">
-                    </span>
-                    <i class="fa-solid fa-chevron-down arrow"></i>
-                </button>
-
-                <div class="accordion-body">
-                    <span class="accordion-body-title">
-                        
-                    </span>
-                </div>
-            </div>
-        </div>
-
+        <div id="club" class="justify-content-center"></div>
 
         <!-- Acesso Rápido -->
         <div id="fastAccess"></div>
@@ -59,6 +46,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/default.js"></script>
+    <script src="assets/js/club.js"></script>
 </body>
 
 </html>
