--- a/contato.html
+++ b/contato.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OAB Jandira</title>
+    <meta name="description" content="Página oficial da OAB de Jandira">
+    <meta name="keywords" content="oabjandira, direito, jandira, advocacia, oab">
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon-OABJandira.ico">
     <link rel="stylesheet" href="assets/css/default.css">
+    <link rel="stylesheet" href="assets/css/home.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Inter Google -->
@@ -14,6 +18,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -38,17 +45,21 @@
                 <!-- Contact and Location info -->
                 <div class="col-lg-6">
                     <div class="location-info">
-                        <h4 style="font-weight: bold;" class="mt-3">Telefone</h4>
-                        <p>(11) 4789-0979</p>
-                        <h4 style="font-weight: bold;">Localização</h4>
-                        <p>Av. Conceição Sammartino 550 - Salas: 37-38<br>Centro - Jandira/SP<br>CEP: 06600-040</p>
-                        <div>
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.431490046335!2d-46.9038422!3d-23.529599!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cf07bac06c39b5%3A0xf1d735a87c249e17!2sOrdem%20dos%20Advogados%20do%20Brasil%20-%20240%C2%AA%20Jandira%20(subse%C3%A7%C3%A3o)!5e0!3m2!1spt-BR!2sbr!4v1696264786982!5m2!1spt-BR!2sbr"
-                                width="60%" height="140" style="border: 2px solid black; border-radius: 15px;"
-                                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-                            </iframe>
-                        </div>
+                        <span class="location-title">Casa da Advocacia</span>
+                        <p class="location-body"><span class="location-bold">Telefone: </span>(11) 4789-0979<br>
+                            <span class="location-bold">Endereço:</span> Av. Conceição Sammartino, 550<br>
+                            Salas: 37-38 | 2º Andar<br>
+                            Centro Comercial e Empresarial<br>
+                            Centro - Jandira/SP<br>
+                            CEP: 06600-080
+                        </p>
+                        <span class="location-title">Sala OAB do Fórum de Jandira</span>
+                        <p class="location-body"><span class="location-bold">Endereço:</span> Av. José Pedro, 401<br>
+                            Jardim Sao Luiz, Jandira - SP, 06618-000</p>
+                        <span class="location-title">Sala OAB do Fórum Trabalhista</span>
+                        <p class="location-body"><span class="location-bold">Endereço:</span> R. Tupi, 20 - Vila Diogo
+                            Balhesteiro<br>
+                            Jandira - SP, 06600-140</p>
                     </div>
                 </div>
             </div>
