--- a/dirExecutiva.html
+++ b/dirExecutiva.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OAB Jandira</title>
+    <meta name="description" content="Página oficial da OAB de Jandira">
+    <meta name="keywords" content="oabjandira, direito, jandira, advocacia, oab">
+    <link rel="icon" type="image/x-icon" href="assets/icons/favicon-OABJandira.ico">
     <link rel="stylesheet" href="assets/css/default.css">
+    <link rel="stylesheet" href="assets/css/home.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Inter Google -->
@@ -14,6 +18,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -24,12 +31,33 @@
         <!-- Navbar -->
         <div id="navbar"></div>
 
-        <!-- Carrossel -->
 
-        <div class="main-content align-content-center" style="background-color: #182933;">
-            <div class="col-12 col-md-6 mx-auto align-items-center">
-                
+        <h1 class="dir-title1">Diretoria Executiva 2022-2024</h1>
+        <br>
+
+        <div class="d-flex justify-content-center">
+            <div class="dir-body">
+                <p class="dir-body-title">Paulo Oliveira</p>
+                <p>Presidente<br>
+                    2022-2024</p>
+                <br>
+
+                <p class="dir-body-title">Sonia Souza dos Santos</p>
+                <p>Vice-Presidente<br>
+                    2022-2024</p>
+                <br>
+
+                <p class="dir-body-title">Renato Pereira Gomes</p>
+                <p>Secretário Geral<br>
+                    2022-2024</p>
+                <br>
+
+                <p class="dir-body-title">Elaine Carvalho de Aquino</p>
+                <p>Tesoureira<br>
+                    2022-2024</p>
+                <br>
             </div>
+
         </div>
 
 
