--- a/club.html
+++ b/club.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="clube de Benefícios, oabjandira, direito, jandira, advocacia, oab">
     <link rel="icon" type="image/x-icon" href="assets/icons/favicon-OABJandira.ico">
     <link rel="stylesheet" href="assets/css/default.css">
-    <link rel="stylesheet" href="assets/css/home.css">
+    <link rel="stylesheet" href="assets/css/club.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Inter Google -->
