--- a/formulario-comissoes.html
+++ b/formulario-comissoes.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Direção Executiva | OAB Jandira</title>
+    <meta http-equiv="refresh" content="1;url=https://forms.gle/ytdVx4EUw16XMbEz7">
     <meta name="description" content="Direção Executiva | Página oficial da OAB de Jandira">
     <meta name="keywords"
         content="direção executiva, presidente, vicepresidente, oabjandira, direito, jandira, advocacia, oab">
@@ -26,23 +27,8 @@
 </head>
 
 <body>
-    <div class="central-container">
-
-
-        <iframe
-            src="https://docs.google.com/forms/d/e/1FAIpQLScBJyDQFMsAyKfJFSZsl1kPcpyqXp2Cdu5rkFsoXt5dcLOX7g/viewform?embedded=true"
-            width="80%" height="3138" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
-
-
-        <!-- Acesso Rápido -->
-        <div id="fastAccess"></div>
-
-        <div id="footer"></div>
-    </div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/default.js"></script>
+    <img src="assets/images/logo-OAB.png" alt="Logo OAB Jandira" class="img-fluid mx-auto d-block mt-5 mb-3" width="300px">
+    <h3 class="text-center">Carregando...</h3>
 </body>
 
 </html>
