--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <!-- Carrossel -->
 
-        <div class="main-content align-content-center" style="background-color: #182933;">
+        <div class="main-content align-content-center" style="background-color: #ccc;">
             <div class="col-12 col-md-6 mx-auto align-items-center">
                 <div id="carouselImgs" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
@@ -57,7 +57,7 @@
                             </a>
                         </div>
                         <div class="carousel-item active">
-                            <a href="https://forms.gle/inCBZuDtkU28VoHt7" target="_blank">
+                            <a href="formulario-comissoes.html" target="_blank">
                                 <img 
                                     src="assets/images/home/Banner-Comissoes.png" 
                                     class="d-block w-100 img-fluid"
