--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         <div class="main-content align-content-center" style="background-color: #ccc;">
             <div class="col-12 col-md-6 mx-auto align-items-center">
                 <div id="carouselImgs" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
+                    <!--<div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselImgs" data-bs-slide-to="0" class="active"
                             aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselImgs" data-bs-slide-to="1"
                             aria-label="Slide 2"></button>
-                    </div>
+                    </div>-->
                     <div class="carousel-inner">
-                        <div class="carousel-item">
+                        <div class="carousel-item active">
                             <a href="contato.html">
                                 <img 
                                     src="assets/images/home/banner-OABJandira.png" 
@@ -56,7 +56,7 @@
                                 >
                             </a>
                         </div>
-                        <div class="carousel-item active">
+                        <!--<div class="carousel-item">
                             <a href="formulario-comissoes.html" target="_blank">
                                 <img 
                                     src="assets/images/home/Banner-Comissoes.png" 
@@ -64,7 +64,7 @@
                                     alt="..."
                                 >
                             </a>
-                        </div>
+                        </div>-->
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselImgs"
                         data-bs-slide="prev">
@@ -90,5 +90,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/default.js"></script>
 </body>
+
 
 </html>
