--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                     >
                                 </a>
                             </div>
-                            <div class="carousel-item" style="background-color: #F7F7F8;">
+                            <div class="carousel-item" style="background-color: #FED597;">
                                 <a href="https://www.instagram.com/oab.jandira" target="_blank">
                                     <img 
                                         src="assets/images/home/Banner - 2.png" 
