--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                     >
                                 </a>
                             </div>
-                            <div class="carousel-item" style="background-color: #FED597;">
+                            <div class="carousel-item" style="background-color: #182933;">
                                 <a href="https://www.instagram.com/p/DQt7VznDq0x/?igsh=MWJwM2JtMnV4djA1bg==" target="_blank">
                                     <img 
                                         src="assets/images/home/Banner - 1.png" 
